# src/main/resources/openapi/components/schemas/common.yaml
@@ -117,6 +117,21 @@ MovieCollectionLinks:
     next:
       $ref: '#/Link'
 
+PersonFilmographyLinks:
+  type: object
+  required: [self]
+  properties:
+    self:
+      $ref: '#/Link'
+    first:
+      $ref: '#/Link'
+    last:
+      $ref: '#/Link'
+    prev:
+      $ref: '#/Link'
+    next:
+      $ref: '#/Link'
+
 Problem:
   type: object
   required: [type, title, status, code, correlationId]
